--- a/src/index.html
+++ b/src/index.html
@@ -15,11 +15,14 @@
   <meta content="CoreUI Free Angular Admin Template" name="description" />
   <meta content="Łukasz Holeczek" name="author" />
   <meta content="CoreUI,Bootstrap,Admin,Template,Free,Angular,Dashboard,Typescript" name="keyword" />
-  <link href="assets/img/brand/logo.png" rel="icon" type="image/x-icon">
+  <link href="assets/icons/logo.png" rel="icon" type="image/x-icon">
   <title>Fodo Admin</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
-<body>
+<body class="mat-typography">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <app-root>
     <div class="fade show" style="text-align: center; padding-top: calc(100vh / 2); height: 100vh">
