Admin, user, product edit done

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <meta content="CoreUI Free Angular Admin Template" name="description" />
   <meta content="Łukasz Holeczek" name="author" />
   <meta content="CoreUI,Bootstrap,Admin,Template,Free,Angular,Dashboard,Typescript" name="keyword" />
-  <link href="assets/icons/logo.png" rel="icon" type="image/x-icon">
+  <link href="" rel="icon" type="image/x-icon">
   <title>Fodo Admin</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
